--- a/BE/appsettings.json
+++ b/BE/appsettings.json
@@ -11,6 +11,10 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "MyCnn": "server=(local);database=TestImportExportExcel;uid=sa;pwd=Truong2002@;TrustServerCertificate=true"
+        "DefaultConnection": "server=(local);database=TestImportExportExcel;uid=sa;pwd=Kavior@123;TrustServerCertificate=true"
+    },
+    "Redis": {
+        "ConnectionString": "localhost:6379"
     }
 }
+
