--- a/BE/appsettings.Development.json
+++ b/BE/appsettings.Development.json
@@ -7,6 +7,9 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "MyCnn": "server=(local);database=TestImportExportExcel;uid=sa;pwd=123456;TrustServerCertificate=true"
+        "DefaultConnection": "server=(local);database=TestImportExportExcel;uid=sa;pwd=Kavior@123;TrustServerCertificate=true"
+    },
+    "Redis": {
+        "ConnectionString": "localhost:6379"
     }
 }
